# pathweaver

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: generate_paths.py  generate_synthetic_data.py  generate_user_path_files.py  load_map_collider.py  place_items.py  simulate_aisle_paths.py  simulate_shopping_paths.py
examples/data/: colliders.csv  sample_transactions.csv  sample_transactions_1.csv
src/pathweaver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pathweaver/analysis/: market_basket.py
src/pathweaver/environment/: item_placement.py  map_loader.py  path_generator.py
src/pathweaver/simulation/: recorder.py
